2020-06-01 Wiley E. Hill <wileyhill@gmail.com>

    * src/geda/geda_pin.c: Reformat documentation blocks.

2020-05-04 Wiley E. Hill <wileyhill@gmail.com>

    * src/math/m_math.c: Revise geda_math_papersize_to_world to use
      ancillary variables to compute adjustment factors.

    * src/object/o_list.c: Revise geda_object_list_scale to handle the
      case of text object types.

    * src/object/o_text_object.c: Add function geda_text_object_scale.

    * tests/test_line_object.c: Add check for geda_line_object_scale.

    * tests/test_math.c: Add check for geda_math_papersize_to_world.

    * tests/test_object_list.c: Check scale text in list.

    * tests/test_picture_object.c: Check geda_picture_object_get_fall
      back_pixbuf returns a non NULL pointer.

2020-04-20 Wiley E. Hill <wileyhill@gmail.com>

    * src/iface/i_menu.c: Add function geda_iface_menu_return_icon,
      update geda_iface_menu_init documentation.

2020-03-27 Wiley E. Hill <wileyhill@gmail.com>

    * src/iface/i_menu.c: Update function documentation, add function
      geda_iface_menu_return_tooltip and reorganize module alphabetizing
      functions.

2020-03-17 Wiley E. Hill <wileyhill@gmail.com>

    * src/geda/geda_pin.c: Add functions:

          * geda_pin_get_sequence
          * geda_pin_get_whichend

    * tests/test_object_list.c: Check scale pin in list.

    * tests/test_pin.c: Add function check_accessors and setup random
      coordinate assignments.

2020-03-16 Wiley E. Hill <wileyhill@gmail.com>

    * src/geda/geda_pin.c: Reoganize module; arrange function in alphabetical
      order. Add todo documentation templates. Add function geda_pin_get_number.

    * tests/test_line_object.c: Revise check_line_object_modify to modify
      the line to the on-entry position before returning. Add checks for
      geda_line_object_rotate.

    * tests/test_math.c: Check geda_math_degrees_to_radians with 180 degrees.
      Add additional checks for geda_math_distance.
