@@ -1,6 +1,9 @@
 2020-06-01 Wiley E. Hill <wileyhill@gmail.com>
 
-    * src/geda/geda_pin.c: Reformat documentation blocks.
+    * src/geda/geda_pin.c: Reformat documentation blocks, update
+      documentation for function:
+
+          * geda_pin_set_whichend
 
 2020-05-04 Wiley E. Hill <wileyhill@gmail.com>
 
